// Copyright 2022 The Tari Project
// SPDX-License-Identifier: BSD-3-Clause

syntax = "proto3";

package tari.dan.common;

message Signature {
  bytes public_nonce = 1;
  bytes signature = 2;
}

message SignatureAndPublicKey {
  bytes public_nonce = 1;
  bytes signature = 2;
  bytes public_key = 3;
}

message SubstateAddress {
  bytes bytes = 1;
}

message Epoch {
  uint64 epoch = 1;
}
